Edit 1 Final 5SR

--- a/source code/public/css/page.css
+++ b/source code/public/css/page.css
@@ -1,5 +1,5 @@
 .slide {
-  background-image: url("https://pasgo.vn/Upload/anh-chi-tiet/nha-hang-ngoc-suong-sai-gon-6-normal-923448512536.webp");
+  background-image: url("../img/panel.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
